--- a/app/package.json
+++ b/app/package.json
@@ -19,9 +19,14 @@
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
+    "@fullcalendar/angular": "^5.10.0",
+    "@fullcalendar/daygrid": "^5.9.0",
+    "@fullcalendar/interaction": "^5.10.0",
+    "@fullcalendar/timegrid": "^5.10.0",
     "@nebular/eva-icons": "^8.0.0",
     "@nebular/theme": "^8.0.0",
     "eva-icons": "^1.1.3",
+    "npm-check": "^5.9.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
