--- a/app/package.json
+++ b/app/package.json
@@ -28,8 +28,10 @@
     "@nebular/eva-icons": "^8.0.0",
     "@nebular/firebase-auth": "^8.0.0",
     "@nebular/theme": "^8.0.0",
+    "angular2-uuid": "^1.1.1",
     "eva-icons": "^1.1.3",
     "firebase": "^7.0 || ^8.0",
+    "ngx-currency": "^2.5.3",
     "npm-check": "^5.9.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
