--- a/app/package.json
+++ b/app/package.json
@@ -40,7 +40,7 @@
   "devDependencies": {
     "@angular-devkit/architect": ">= 0.900 < 0.1300",
     "@angular-devkit/build-angular": "~12.1.3",
-    "@angular/cli": "~12.1.3",
+    "@angular/cli": "^12.1.3",
     "@angular/compiler-cli": "~12.1.0-",
     "@schematics/angular": "~12.1.3",
     "@types/jasmine": "~3.8.0",
