--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "angular2-uuid": "^1.1.1",
     "eva-icons": "^1.1.3",
     "firebase": "^7.0 || ^8.0",
+    "ngx-avatar": "^4.1.0",
     "ngx-currency": "^2.5.3",
     "npm-check": "^5.9.2",
     "rxjs": "~6.6.0",
