--- a/app/package.json
+++ b/app/package.json
@@ -31,8 +31,10 @@
     "angular2-uuid": "^1.1.1",
     "eva-icons": "^1.1.3",
     "firebase": "^7.0 || ^8.0",
+    "lodash": "^4.17.21",
     "ngx-avatar": "^4.1.0",
     "ngx-currency": "^2.5.3",
+    "ngx-image-cropper": "^5.0.1",
     "npm-check": "^5.9.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -45,6 +47,7 @@
     "@angular/compiler-cli": "~12.1.0-",
     "@schematics/angular": "~12.1.3",
     "@types/jasmine": "~3.8.0",
+    "@types/lodash": "^4.14.176",
     "@types/node": "^12.11.1",
     "firebase-tools": "^8.0.0 || ^9.0.0",
     "fuzzy": "^0.1.3",
