--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "@fullcalendar/interaction": "^5.10.0",
     "@fullcalendar/timegrid": "^5.10.0",
     "@nebular/auth": "^8.0.0",
+    "@nebular/date-fns": "^8.0.0",
     "@nebular/eva-icons": "^8.0.0",
     "@nebular/firebase-auth": "^8.0.0",
     "@nebular/theme": "^8.0.0",
